logs/watchdog_20251013_0300.log
[13/10/2025  3:00:01,65] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025  3:00:01,95] END WATCHDOG 
